# open-synthesis

./: .codeclimate.yml  .coveragerc  .env  .eslintrc.json  .gitignore  .isort.cfg  .landscape.yml  .pre-commit-config.yaml  .travis.yml  ACKNOWLEDGEMENTS.md  CONTRIBUTING.md  PRIVACY.md  Procfile  README.md  SECURITY.md  app.json  conf.py  conftest.py  contribute.json  env.sample  manage.py  package-lock.json  package.json  pylintrc  pyproject.toml  requirements.txt  tox.ini  webpack.config.base.js  webpack.config.dev.js  webpack.config.js  webpack.config.prod.js
.github/: dependabot.yaml
.github/workflows/: codeql-analysis.yml  integration.yaml
assets/css/: sharing.css
assets/js/: board_search.js  index.js  notify.js
openach/: __init__.py  account_adapters.py  admin.py  apps.py  auth.py  context_processors.py  decorators.py  digest.py  donate.py  forms.py  metrics.py  models.py  recommendations.py  signals.py  sitemap.py  tasks.py  tests.py  urls.py  util.py  views.py
openach/data/: boards.csv  evaluations.csv  evidence.csv  hypothesis.csv  users.csv
openach/fixtures/: source_tags.yaml
openach/management/: __init__.py
openach/migrations/: 0001_initial.py  0002_auto_20160825_1350.py  0003_auto_20160825_1622.py  0004_auto_20160826_1651.py  0005_evidencesource_source_date.py  0006_evidence_submit_date.py  0007_auto_20160826_1841.py  0008_auto_20160826_2300.py  0009_projectnews.py  0010_evidencesource_corroborating.py  0011_board_board_slug.py  0012_auto_20160829_2127.py  0013_hypothesis_submit_date.py  0014_auto_20160908_1915.py  0015_auto_20160915_1402.py  0016_auto_20160915_1436.py  0017_evaluation_timestamp.py  0018_auto_20160919_2318.py  0019_boardfollower.py  0020_auto_20160923_0141.py  0021_usersettings.py  0022_auto_20160924_1845.py  0025_digeststatus.py  (+27 more)
openintel/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
(+103 files in other folders)
